[gd_scene load_steps=5 format=3 uid="uid://dsqthxqvefxlr"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_jjks4"]
[ext_resource type="FontFile" uid="uid://cxrjbihbo0njl" path="res://fonts/kenney_kenney-fonts/Fonts/Kenney High.ttf" id="1_ux6wi"]
[ext_resource type="AudioStream" uid="uid://bd6d6v05782bw" path="res://assets/sounds/Clic03.ogg" id="3_hhd7t"]
[ext_resource type="AudioStream" uid="uid://um8mmg471h7m" path="res://assets/sounds/mouse_hover.ogg" id="4_gi7te"]

[node name="PauseMenu" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jjks4")

[node name="PausaRects" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.643137)

[node name="PausaMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PausaContainer" type="VBoxContainer" parent="PausaMargin"]
layout_mode = 2
alignment = 1

[node name="Pausa" type="Label" parent="PausaMargin/PausaContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_ux6wi")
theme_override_font_sizes/font_size = 64
text = "Pausa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PausaMargin"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="PausaMargin/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ux6wi")
theme_override_font_sizes/font_size = 42
text = "presione esc para volver"
horizontal_alignment = 1

[node name="button_pressing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hhd7t")

[node name="button_switching" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gi7te")
